RabbitMQ example first commit v2

--- a/mzerekconsumer/src/main/resources/application.properties
+++ b/mzerekconsumer/src/main/resources/application.properties
@@ -1,8 +1,18 @@
 spring.application.name=consumer-service
 
+server.port=8081
+
+# RabbitMQ
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
-server.port=8081
+# RabbitMQ custom properties
+spring.topic-exchange.name=animalHabitat
+spring.terrestrial.queue.name=terrestrial
+spring.aquatic.queue.name=aquatic
+spring.aerial.queue.name=aerial
+spring.terrestrial.queue.routing-key=*.*.terrestrial.*
+spring.aquatic.queue.routing-key=aquatic.#
+spring.aerial.queue.routing-key=*.aerial.#
