--- a/mzerekproducer/src/main/resources/application.properties
+++ b/mzerekproducer/src/main/resources/application.properties
@@ -1,6 +1,16 @@
 spring.application.name=producer-service
 
+# RabbitMQ
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
+# RabbitMQ custom properties
+spring.topic-exchange.name=animalHabitat
+spring.terrestrial.queue.name=terrestrial
+spring.aquatic.queue.name=aquatic
+spring.aerial.queue.name=aerial
+spring.terrestrial.queue.routing-key=*.*.terrestrial.*
+spring.aquatic.queue.routing-key=aquatic.#
+spring.aerial.queue.routing-key=*.aerial.#
