Add docker configuration v1

--- a/mzerekconsumer/src/main/resources/application.properties
+++ b/mzerekconsumer/src/main/resources/application.properties
@@ -3,7 +3,9 @@ spring.application.name=consumer-service
 server.port=8081
 
 # RabbitMQ
-spring.rabbitmq.host=localhost
+#spring.rabbitmq.host=localhost
+#host 172.17.0.2 for docker rabbitmq
+spring.rabbitmq.host=172.17.0.2
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
