--- a/mzerekproducer/src/main/resources/application.properties
+++ b/mzerekproducer/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.application.name=producer-service
 
 # RabbitMQ
-spring.rabbitmq.host=localhost
+#spring.rabbitmq.host=localhost
+#host 172.17.0.2 for docker rabbitmq
+spring.rabbitmq.host=172.17.0.2
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
